add tests for TaskController
